syntax = "proto3";

option java_package = "org.alps.core.proto";
option java_outer_classname = "IFrame";

message IdleFrame {
  int32 id = 1;
}

message ForgetFrame {
  int32 id = 1;
  int32 command = 2;
}

message RequestFrame {
  int32 id = 1;
  int32 command = 2;
}

message ResponseFrame{
  int32 id = 1;
  int32 reqId = 2;
}

message ErrorFrame {
  int32 id = 1;
  int32 code = 2;
}